<resources>
    <string name="app_name">Radio 3</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Name</string>
    <string name="sobrenome">Last Name</string>
    <string name="email">Email</string>
    <string name="lesao">Location of the lesion</string>
    <string name="nada">Nothing yet</string>
    <string name="sexo">Gender</string>
    <string name="expansion">Expansion</string>
    <string name="age">Age</string>
    <string name="paretesia">Paresthesia</string>


    <!--Lista de localização da lesão-->
    <string name="superior">Upper</string>
    <string name="inferior">Below</string>
    <string name="superior_e_inferior">Upper and Below</string>

    <!--Lista de gênero-->
    <string name="masculino">Man</string>
    <string name="feminino">Woman</string>



</resources>
